--- a/src/main/resources/static/views/sideMenu.html
+++ b/src/main/resources/static/views/sideMenu.html
@@ -6,7 +6,12 @@
             <ul id="side-menu" class="nav">
 
                 <div class="clearfix"></div>
-                <li ng-class="{active: $state.current.name == 'home.projects' || $state.current.name == 'home.project' || $state.current.name == 'home.tasks'}">
+                <li ng-class="{
+                    active:
+                    $state.current.name == 'home.projects' ||
+                    $state.current.name == 'home.project' ||
+                    $state.current.name == 'home.tasks' ||
+                    $state.current.name == 'home.task'}">
                     <a ui-sref="home.projects"><i class="fa fa-folder-open fa-fw">
                     <div class="icon-bg bg-orange"></div>
                 </i><span class="menu-title">Projects</span></a>
