--- a/src/main/resources/static/views/charts.html
+++ b/src/main/resources/static/views/charts.html
@@ -1,3 +1,6 @@
 <div>
     Charts
+    <canvas id="doughnut" class="chart chart-doughnut"
+            chart-data="data" chart-labels="labels">
+    </canvas>
 </div>
