profile page done

--- a/src/main/resources/static/views/sideMenu.html
+++ b/src/main/resources/static/views/sideMenu.html
@@ -11,7 +11,7 @@
                     $state.current.name == 'home.projects' ||
                     $state.current.name == 'home.project' ||
                     $state.current.name == 'home.tasks' ||
-                    $state.current.name == 'home.tasks' ||
+                    $state.current.name == 'home.task' ||
                     $state.current.name == 'home.devs'}">
                     <a ui-sref="home.projects"><i class="fa fa-folder-open fa-fw">
                     <div class="icon-bg bg-orange"></div>
