--- a/src/main/resources/static/views/navBar.html
+++ b/src/main/resources/static/views/navBar.html
@@ -11,7 +11,7 @@
                     <a data-toggle="dropdown" href class="dropdown-toggle">
                     <span class="hidden-xs" ng-model="name">{{name}}</span>&nbsp;<span class="caret"></span></a>
                     <ul class="dropdown-menu dropdown-user pull-right">
-                        <li><a href="#"><i class="fa fa-user"></i>My Profile</a></li>
+                        <li><a ui-sref="home.profile"><i class="fa fa-user"></i>My Profile</a></li>
                         <li><a href ng-click="logout()"><i class="fa fa-key"></i>Log Out</a></li>
                     </ul>
                 </li>
