profile editing done

--- a/src/main/resources/static/views/profile.html
+++ b/src/main/resources/static/views/profile.html
@@ -23,7 +23,7 @@
         <div>
             Email: {{user.email}}
         </div>
-        <button class="btn btn-default">Edit</button>
+        <button class="btn btn-default" ng-click="openEdit(user)">Edit</button>
     </div>
 </div>
 
