calendar added, needs css fix

--- a/src/main/resources/static/views/calendar.html
+++ b/src/main/resources/static/views/calendar.html
@@ -1,3 +1,42 @@
 <div>
-    Calendar
+
+    <div id="title-breadcrumb-option-demo" class="page-title-breadcrumb">
+        <div class="page-header pull-left">
+            <div class="page-title">
+                Charts
+            </div>
+            <div>
+                Select a project to see it's statistics
+            </div>
+        </div>'
+
+        <div class="clearfix"></div>
+    </div>
+
+    <div class="mbl p-t-15">
+        <label for="proj_name" class="control-label">
+            <h4>Project:</h4>
+        </label>
+        <select
+                class="form-control input-sm"
+                id="proj_name"
+                name="proj_name"
+                ng-init='projects[0].id'
+                ng-model="selectedProj"
+                ng-change="getData()"
+                ng-options="project as project.name for project in projects track by project.id">
+        </select>
+    </div>
+
+    <md-event-calendar
+            md-events="data"
+            auto-height=""
+            class="md-primary"
+    >
+        <md-event-calendar-header class="md-center">
+            <md-event-calendar-prev></md-event-calendar-prev>
+            <md-event-calendar-title></md-event-calendar-title>
+            <md-event-calendar-next></md-event-calendar-next>
+        </md-event-calendar-header>
+    </md-event-calendar>
 </div>
