project DTO + project list view refactored

--- a/src/main/resources/static/views/projects-dev.html
+++ b/src/main/resources/static/views/projects-dev.html
@@ -79,7 +79,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-4 emphasis">
                                 <h2>
-                                    <strong>{{getMy(project)}}</strong></h2>
+                                    <strong>{{project.tasks.length}}</strong></h2>
                                 <p>
                                     <small>All tasks</small>
                                 </p>
