--- a/src/main/resources/static/views/charts.html
+++ b/src/main/resources/static/views/charts.html
@@ -27,7 +27,7 @@
         </select>
     </div>
 
-    <div ng-if="doughData.length == 0">
+    <div ng-if="horizData.length == 0">
         There are no tasks in this project
     </div>
 
